--- a/Views/Visitors/Create.cshtml
+++ b/Views/Visitors/Create.cshtml
@@ -23,6 +23,11 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Business" class="control-label"></label>
+                <input asp-for="Business" class="form-control" />
+                <span asp-validation-for="Business" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="DateIn" class="control-label"></label>
                 <input asp-for="DateIn" class="form-control" />
                 <span asp-validation-for="DateIn" class="text-danger"></span>
@@ -34,7 +39,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="StaffNameId" class="control-label"></label>
-                <select asp-for="StaffNameId" class ="form-control" asp-items="ViewBag.StaffNameId"></select>
+                <select asp-for="StaffNameId" class="form-control" asp-items="ViewBag.StaffNameId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
