Added: PartialAsync for Conditions

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to this page</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="">
+    <h1 class="display-4 text-center"> @ViewData["Welcome"]</h1>
+    @*<p>@foreach (var item in (IEnumerable<string>)ViewData["Visitor"])
+        {
+            @item.fi;
+        }*@
+
+    </p>
+    <p>@ViewBag.VisitorNew.FirstName</p>
+   
+    @await Html.PartialAsync("_Conditions") 
+
+
 </div>
