Added SweetAlert and updated staff visitor count

--- a/Views/Visitors/Create.cshtml
+++ b/Views/Visitors/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model VisitorManagementStudent2022.Models.Visitors
+﻿@model VisitorManagementStudent2022.ViewModels.VisitorsVM
 
 @{
     ViewData["Title"] = "Create";
