--- a/Views/Visitors/Index.cshtml
+++ b/Views/Visitors/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<VisitorManagementStudent2022.Models.Visitors>
+﻿@model IEnumerable<VisitorManagementStudent2022.ViewModels.VisitorsVM>
 
 @{
     ViewData["Title"] = "Index";
